session21-final-devops-project/final-devops-project/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-tracker
  labels:
    app.kubernetes.io/part-of: final-devops-project
